# vuu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.sh  main.py  pyproject.toml  uvk5.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  feature_request.yml
.github/rulesets/: protect-main.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  issue-triage.yml  release.yml
tests/: test_csv_parsers.py  test_uvk5.py
