[project]
name = "vuu"
version = "0.2.0"
description = "UV-K5 channel importer/exporter with GUI and CHIRP CSV support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[project.scripts]
vuu = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "uvk5.py"]
