[project]
name = "vuu"
version = "1.0.0"
description = "UV-K5 channel importer/exporter with GUI and CHIRP CSV support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[project.scripts]
vuu = "main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "commitizen>=3.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "uvk5.py"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false
changelog_incremental = true
bump_message = "bump: version $current_version -> $new_version"
