[project]
name = "vuu"
version = "1.0.0"
description = "UV-K5 channel importer/exporter with GUI and CHIRP CSV support"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[project.scripts]
vuu = "main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "commitizen>=3.29",
    {include-group = "test"},
    {include-group = "lint"},
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.ruff]
line-length = 100
extend-exclude = ["dist", "assets"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "uvk5.py", "assets"]
exclude = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false
changelog_incremental = true
bump_message = "bump: version $current_version -> $new_version"
